syntax = "proto3";
package books;

message Book {
  string id = 1;
  string title = 2;
  string authorId = 3;
}

message GetBookRequest {
  string book_id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message SearchBooksRequest {}

message SearchBooksResponse {
  repeated Book books = 1;
}

message AddBookRequest {
  string title = 1;
  string authorId = 2;
}

message AddBookResponse {
  Book book = 1;
}

service BooksService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  rpc SearchBooks(SearchBooksRequest) returns (SearchBooksResponse);
  rpc AddBook(AddBookRequest) returns (AddBookResponse);
}
